--- a/package.json
+++ b/package.json
@@ -14,24 +14,29 @@
   ],
   "dependencies": {
     "@babel/polyfill": "^7.7.0",
+    "@popperjs/core": "^2.4.2",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "classnames": "^2.2.6",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.3",
+    "express": "^4.17.1",
     "express-graphql": "~0.8.0",
     "express-jwt": "^5.3.1",
     "graphql": "^14.5.8",
     "history": "^4.7.2",
     "isomorphic-style-loader": "^5.1.0",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.3.0",
     "node-fetch": "^2.2.0",
     "normalize.css": "^8.0.0",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
+    "popper.js": "^1.16.0",
     "pretty-error": "^2.1.1",
     "prop-types": "^15.6.2",
     "query-string": "^6.9.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
